# climlab

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  ClimateUtils.py  ColumnModel.py  LICENSE  LICENSE.txt  MANIFEST.in  README  README.rst  __init__.py  appveyor.yml  build_fortran_extensions.py  clean.sh  column.py  ebm.py  environment.yml  meta.yaml  modules_link.rst  new_thoughts.md  orbital.py  orbital_extended.py  paper.bib  paper.md  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  thermo.py
apidoc-test/: Makefile  climlab.domain.rst  climlab.dynamics.rst  climlab.rst  climlab.solar.rst  climlab.surface.rst  conf.py  make.bat
ci/: install_python.ps1  requirements-linux.yml  requirements-macos-arm64.yml  requirements-macos.yml  requirements-py27-linux.yml  requirements-py27-osx.yml  requirements-py36-linux.yml  requirements-py36-osx.yml  requirements-py36-windows.yml  requirements-py37-linux.yml  requirements-py37-osx.yml  requirements-py37-windows.yml  requirements-py38-linux.yml  requirements-py38-osx.yml  requirements-py38-windows.yml  requirements-py39-linux.yml  requirements-py39-osx.yml  requirements-py39-windows.yml  requirements-windows.yml
climlab/: BergerLoutre1991.py  BergerLoutre91_orbital.csv  La2004.py  __init__.py  axis.py  column.py  constants.py  convadj.py  diffusion.py  ebm.py  flux.py  grey_radiation.py  grid.py  heatCapacity.py  heat_capacity.py  insolation.py  legendre.py  long_orbital_table.py  meridional_diffusion.py  model.py  nband.py  nbandflux.py  netcdf.py  oop.py  orbital.py  orbital_extended.py  orbital_table.py  (+10 more)
(+759 files in other folders)
