[build-system]
requires = [
    "wheel",
    "setuptools",
    "numpy",
]
[tool.pytest]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "fast: marks tests as fast (select these only with '-m fast')",
    "compiled: marks tests as requiring compiled components (deselect with '-m \"not compiled\"')",
]
